--- a/ex1.html
+++ b/ex1.html
@@ -28,7 +28,7 @@
                 <P>자신의 스타일, 협업 스타일: 의견을 적극적으로 내고 들을려고 함</P>
                 <div class="icons">
                   <a href="https://velog.io/@choipoe/posts" target="_blank">
-                    
+                    <i class="fa-solid fa-blog"></i>
                   </a>
                 </div>
               </div>
